--- a/maven-java/pom.xml
+++ b/maven-java/pom.xml
@@ -64,6 +64,12 @@
             <artifactId>aspectjweaver</artifactId>
             <version>1.8.7</version>
         </dependency>
+      <dependency>
+        <groupId>org.projectlombok</groupId>
+        <artifactId>lombok</artifactId>
+        <version>1.18.12</version>
+        <scope>compile</scope>
+      </dependency>
     </dependencies>
 
     <properties>
