--- a/maven-springboot/src/main/resources/application.properties
+++ b/maven-springboot/src/main/resources/application.properties
@@ -1,1 +1,22 @@
+server.port=45678
+
+spring.datasource.url=jdbc:mysql://localhost:3306/maven?characterEncoding=UTF-8&useSSL=false&rewriteBatchedStatements=true&serverTimezone=GMT
+spring.datasource.username = root
+spring.datasource.password = 0510
+spring.datasource.platform=mysql
+spring.datasource.maximum-pool-size=100
+spring.jpa.open-in-view=false
+spring.jpa.hibernate.use-new-id-generator-mappings= false
+logging.level.org.springframework.orm.jpa=DEBUG
+#spring.datasource.driver-class-name: com.mysql.cj.jdbc.Driver
+
 server.tomcat.threads.max=1
+
+SmsClient.ribbon.listOfServers=localhost:45679,localhost:45678
+
+#feign.client.config.default.readTimeout=3000
+#feign.client.config.default.connectTimeout=3000
+#feign.client.config.clientsdk.readTimeout=2000
+#feign.client.config.clientsdk.connectTimeout=2000
+#ribbon.ReadTimeout=4000
+#ribbon.ConnectTimeout=4000
