--- a/maven-springboot/src/main/resources/application.properties
+++ b/maven-springboot/src/main/resources/application.properties
@@ -5,6 +5,8 @@ spring.datasource.username = root
 spring.datasource.password = 0510
 spring.datasource.platform=mysql
 spring.datasource.maximum-pool-size=100
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
 spring.jpa.open-in-view=false
 spring.jpa.hibernate.use-new-id-generator-mappings= false
 logging.level.org.springframework.orm.jpa=DEBUG
