--- a/mvn-book/account-aggregator/pom.xml
+++ b/mvn-book/account-aggregator/pom.xml
@@ -17,6 +17,7 @@
     <module>../account-email</module>
     <module>../account-persist</module>
     <module>../account-parent</module>
+    <module>../account-captcha</module>
   </modules>
 
 </project>
