--- a/mvn-book/account-parent/pom.xml
+++ b/mvn-book/account-parent/pom.xml
@@ -11,6 +11,14 @@
   <packaging>pom</packaging>
   <name>account-parent</name>
 
+  <modules>
+    <module>../account-email</module>
+    <module>../account-persist</module>
+    <module>../account-captcha</module>
+    <module>../account-service</module>
+    <module>../account-web</module>
+  </modules>
+
   <properties>
     <springframework.version>2.5.6</springframework.version>
     <junit.version>4.7</junit.version>
@@ -39,6 +47,11 @@
         <version>${springframework.version}</version>
       </dependency>
       <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-web</artifactId>
+        <version>${springframework.version}</version>
+      </dependency>
+      <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
         <version>${junit.version}</version>
@@ -62,6 +75,21 @@
               </goals>
             </execution>
           </executions>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <configuration>
+            <source>1.5</source>
+            <target>1.5</target>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-resources-plugin</artifactId>
+          <configuration>
+            <encoding>UTF-8</encoding>
+          </configuration>
         </plugin>
       </plugins>
     </pluginManagement>
