--- a/spring-in-action/pom.xml
+++ b/spring-in-action/pom.xml
@@ -70,6 +70,19 @@
     </dependency>
     <!-- web相关依赖 结束 -->
 
+    <!-- 数据库相关依赖 开始 -->
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-jdbc</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>5.1.38</version>
+    </dependency>
+    <!-- 数据库相关依赖 结束 -->
+
     <dependency>
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-validator</artifactId>
