--- a/spring-in-action/pom.xml
+++ b/spring-in-action/pom.xml
@@ -7,6 +7,7 @@
   <groupId>com.itheima</groupId>
   <artifactId>spring-in-action</artifactId>
   <version>1.0-SNAPSHOT</version>
+  <packaging>war</packaging>
 
   <properties>
     <spring.version>4.0.9.RELEASE</spring.version>
@@ -80,6 +81,21 @@
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
       <version>5.1.38</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-orm</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-entitymanager</artifactId>
+      <version>4.0.1.Final</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.data</groupId>
+      <artifactId>spring-data-jpa</artifactId>
+      <version>1.8.0.RELEASE</version>
     </dependency>
     <!-- 数据库相关依赖 结束 -->
 
