--- a/maven-java/pom.xml
+++ b/maven-java/pom.xml
@@ -107,5 +107,10 @@
       <artifactId>logback-core</artifactId>
       <version>1.3.5</version>
     </dependency>
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>fastjson</artifactId>
+      <version>1.2.83</version>
+    </dependency>
   </dependencies>
 </project>
