--- a/maven-java/src/main/resources/prop.properties
+++ b/maven-java/src/main/resources/prop.properties
@@ -1,2 +1,6 @@
+jdbc.driver=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/mybatis
+jdbc.username=root
+jdbc.password=0510
 className=com.itheima.reflect.domain.Student
 methodName=sleep
