--- a/maven-java/pom.xml
+++ b/maven-java/pom.xml
@@ -116,5 +116,10 @@
       <artifactId>hutool-all</artifactId>
       <version>5.7.22</version>
     </dependency>
+    <dependency>
+      <groupId>org.jsoup</groupId>
+      <artifactId>jsoup</artifactId>
+      <version>1.15.3</version>
+    </dependency>
   </dependencies>
 </project>
