--- a/maven-java/pom.xml
+++ b/maven-java/pom.xml
@@ -18,7 +18,7 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-context</artifactId>
-      <version>5.0.2.RELEASE</version>
+      <version>5.3.10</version>
     </dependency>
     <dependency>
       <groupId>commons-dbutils</groupId>
@@ -58,7 +58,7 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-test</artifactId>
-      <version>5.0.2.RELEASE</version>
+      <version>5.3.10</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -126,17 +126,18 @@
     <dependency>
       <groupId>org.apache.lucene</groupId>
       <artifactId>lucene-core</artifactId>
-      <version>7.4.0</version>
+      <!-- 原lucene测试代码使用的是7.4.0，为了与7.10.0版本的es兼容，使用了8.7.0 -->
+      <version>8.7.0</version>
     </dependency>
     <dependency>
       <groupId>org.apache.lucene</groupId>
       <artifactId>lucene-analyzers-common</artifactId>
-      <version>7.4.0</version>
+      <version>8.7.0</version>
     </dependency>
     <dependency>
       <groupId>org.apache.lucene</groupId>
       <artifactId>lucene-queryparser</artifactId>
-      <version>7.4.0</version>
+      <version>8.7.0</version>
     </dependency>
     <dependency>
       <groupId>commons-io</groupId>
@@ -149,5 +150,32 @@
       <version>1.0-SNAPSHOT</version>
     </dependency>
     <!-- lucene依赖结束 -->
+
+    <!-- Java客户端操作es依赖开始 -->
+    <dependency>
+      <groupId>org.elasticsearch</groupId>
+      <artifactId>elasticsearch</artifactId>
+      <version>7.10.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.elasticsearch.client</groupId>
+      <artifactId>transport</artifactId>
+      <version>7.10.0</version>
+    </dependency>
+    <!-- Java客户端操作es依赖结束 -->
+
+    <!-- spring-data-elasticsearch依赖开始 -->
+    <dependency>
+      <groupId>org.springframework.data</groupId>
+      <artifactId>spring-data-elasticsearch</artifactId>
+      <version>4.2.5</version>
+      <exclusions>
+        <exclusion>
+          <groupId>org.elasticsearch.plugin</groupId>
+          <artifactId>transport-netty4-client</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <!-- spring-data-elasticsearch依赖结束 -->
   </dependencies>
 </project>
