--- a/maven-java/pom.xml
+++ b/maven-java/pom.xml
@@ -121,5 +121,33 @@
       <artifactId>jsoup</artifactId>
       <version>1.15.3</version>
     </dependency>
+
+    <!-- lucene依赖开始 -->
+    <dependency>
+      <groupId>org.apache.lucene</groupId>
+      <artifactId>lucene-core</artifactId>
+      <version>7.4.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.lucene</groupId>
+      <artifactId>lucene-analyzers-common</artifactId>
+      <version>7.4.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.lucene</groupId>
+      <artifactId>lucene-queryparser</artifactId>
+      <version>7.4.0</version>
+    </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.6</version>
+    </dependency>
+    <dependency>
+      <groupId>com.chulung</groupId>
+      <artifactId>IK-Analyzer</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+    <!-- lucene依赖结束 -->
   </dependencies>
 </project>
