--- a/maven-springboot/src/main/resources/application.properties
+++ b/maven-springboot/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.jpa.hibernate.use-new-id-generator-mappings= false
 logging.level.org.springframework.orm.jpa=DEBUG
 #spring.datasource.driver-class-name: com.mysql.cj.jdbc.Driver
 
-server.tomcat.threads.max=1
+server.tomcat.max-threads=1
 
 SmsClient.ribbon.listOfServers=localhost:45679,localhost:45678
 
