--- a/maven-springboot/src/main/resources/application.properties
+++ b/maven-springboot/src/main/resources/application.properties
@@ -1,18 +1,25 @@
 server.port=45678
 
 spring.datasource.url=jdbc:mysql://localhost:3306/maven?characterEncoding=UTF-8&useSSL=false&rewriteBatchedStatements=true&serverTimezone=GMT
-spring.datasource.username = root
-spring.datasource.password = 0510
+spring.datasource.username=root
+spring.datasource.password=0510
 spring.datasource.platform=mysql
-spring.datasource.maximum-pool-size=100
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.hikari.register-mbeans=true
+#????????10?????????????1
+#spring.datasource.hikari.maximum-pool-size=1
+#??30?????1???????????1????????
+#spring.datasource.hikari.connection-timeout=1000
+
 spring.redis.host=127.0.0.1
 spring.redis.port=6379
 spring.jpa.open-in-view=false
-spring.jpa.hibernate.use-new-id-generator-mappings= false
+spring.jpa.hibernate.use-new-id-generator-mappings=false
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=update
 logging.level.org.springframework.orm.jpa=DEBUG
-#spring.datasource.driver-class-name: com.mysql.cj.jdbc.Driver
 
-server.tomcat.max-threads=1
+server.tomcat.max-threads=100
 
 SmsClient.ribbon.listOfServers=localhost:45679,localhost:45678
 
