Java业务开发常见错误100例第5讲HTTP调用旧代码重构和补充

--- a/springboot--practice-project/src/main/resources/application.properties
+++ b/springboot--practice-project/src/main/resources/application.properties
@@ -6,9 +6,7 @@ spring.datasource.password=0510
 spring.datasource.platform=mysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.register-mbeans=true
-#????????10?????????????1
 #spring.datasource.hikari.maximum-pool-size=1
-#??30?????1???????????1????????
 #spring.datasource.hikari.connection-timeout=1000
 
 spring.redis.host=127.0.0.1
@@ -21,11 +19,15 @@ logging.level.org.springframework.orm.jpa=DEBUG
 
 server.tomcat.max-threads=100
 
-SmsClient.ribbon.listOfServers=localhost:45679,localhost:45678
+clientsdk.ribbon.listOfServers=localhost:45678
+SmsClient.ribbon.listOfServers=localhost:45678,localhost:45679
+ribbon.MaxAutoRetriesNextServer=3
 
-#feign.client.config.default.readTimeout=3000
-#feign.client.config.default.connectTimeout=3000
+feign.client.config.default.readTimeout=1500
+feign.client.config.default.connectTimeout=3000
+
 #feign.client.config.clientsdk.readTimeout=2000
 #feign.client.config.clientsdk.connectTimeout=2000
-#ribbon.ReadTimeout=4000
+#ribbon.ReadTimeout=1500
 #ribbon.ConnectTimeout=4000
+
