--- a/springboot--practice-project/pom.xml
+++ b/springboot--practice-project/pom.xml
@@ -100,6 +100,10 @@
 			<artifactId>fluent-hc</artifactId>
 			<version>4.5.9</version>
 		</dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+    </dependency>
   </dependencies>
 
 	<build>
