--- a/springboot--practice-project/src/main/resources/application.properties
+++ b/springboot--practice-project/src/main/resources/application.properties
@@ -16,6 +16,9 @@ spring.jpa.hibernate.use-new-id-generator-mappings=false
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 logging.level.org.springframework.orm.jpa=DEBUG
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.type=trace
+
 
 server.tomcat.max-threads=100
 
