--- a/maven-practice-project/src/main/resources/prop.properties
+++ b/maven-practice-project/src/main/resources/prop.properties
@@ -1,6 +1,6 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/mybatis
-jdbc.username=root
-jdbc.password=0510
+jdbc.url=jdbc:mysql://polardb-hl.mysql.polardb.rds.aliyuncs.com:3306/mybatis
+jdbc.username=hl_dev
+jdbc.password=hl&12345
 className=com.itheima.reflect.domain.Student
 methodName=sleep
