--- a/springboot-practice-project/src/main/resources/application.properties
+++ b/springboot-practice-project/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=45678
 
-spring.datasource.url=jdbc:mysql://localhost:3306/maven?characterEncoding=UTF-8&useSSL=false&rewriteBatchedStatements=true&serverTimezone=GMT
-spring.datasource.username=root
-spring.datasource.password=0510
+spring.datasource.url=jdbc:mysql://polardb-hl.mysql.polardb.rds.aliyuncs.com:3306/maven?characterEncoding=UTF-8&useSSL=false&rewriteBatchedStatements=true&serverTimezone=GMT
+spring.datasource.username=hl_dev
+spring.datasource.password=hl&12345
 spring.datasource.platform=mysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.register-mbeans=true
