--- a/springboot-practice-project/src/main/resources/application.properties
+++ b/springboot-practice-project/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=45678
 
-spring.datasource.url=jdbc:mysql://polardb-hl.mysql.polardb.rds.aliyuncs.com:3306/maven?characterEncoding=UTF-8&useSSL=false&rewriteBatchedStatements=true&serverTimezone=GMT
+spring.datasource.url=jdbc:mysql://polardb-hl.mysql.polardb.rds.aliyuncs.com:3306/practice?characterEncoding=UTF-8&useSSL=false&rewriteBatchedStatements=true&serverTimezone=GMT
 spring.datasource.username=hl_dev
 spring.datasource.password=hl&12345
 spring.datasource.platform=mysql
