--- a/springboot-practice-project/pom.xml
+++ b/springboot-practice-project/pom.xml
@@ -104,6 +104,12 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
     </dependency>
+
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.2.83</version>
+		</dependency>
   </dependencies>
 
 	<build>
